Web Tech Assignments

--- a/ASSIGNMENT-2/newthings.htm
+++ b/ASSIGNMENT-2/newthings.htm
@@ -15,11 +15,13 @@
         <div>
             <ol>
                 <li>The Center Tag</li>
-                <li>Orienting paragraphs</li>
                 <li>Using a div tag to create sections of a webpage !!</li>
-                <li>How to link different webpages pages</li>
+                <li>How to link different webpages</li>
                 <li>Padding and Spacing of Images</li>
                 <li>Some Basic CSS code for styling webpages</li>
+                <li>Inserting Images in Tables</li>
+                <li>Using Lists within Tables</li>
+                <li>Creating Forms</li>
             </ol>
         </div>
     </body>
